--- a/Proximity93316Tracker.xcodeproj/xcshareddata/xcschemes/Proximity Tracker.xcscheme
+++ b/Proximity93316Tracker.xcodeproj/xcshareddata/xcschemes/Proximity Tracker.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "1FEA5C9E2BBC8A250023D38D"
-               BuildableName = "Rubber Duck.app"
-               BlueprintName = "Rubber Duck"
-               ReferencedContainer = "container:Rubber Duck.xcodeproj">
+               BuildableName = "Proximity93316Tracker.app"
+               BlueprintName = "Proximity93316Tracker"
+               ReferencedContainer = "container:Proximity93316Tracker.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,9 +35,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "1FEA5CAE2BBC8A260023D38D"
-               BuildableName = "Rubber DuckTests.xctest"
-               BlueprintName = "Rubber DuckTests"
-               ReferencedContainer = "container:Rubber Duck.xcodeproj">
+               BuildableName = "Proximity93316TrackerTests.xctest"
+               BlueprintName = "Proximity93316TrackerTests"
+               ReferencedContainer = "container:Proximity93316Tracker.xcodeproj">
             </BuildableReference>
          </TestableReference>
          <TestableReference
@@ -46,9 +46,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "1FEA5CB82BBC8A260023D38D"
-               BuildableName = "Rubber DuckUITests.xctest"
-               BlueprintName = "Rubber DuckUITests"
-               ReferencedContainer = "container:Rubber Duck.xcodeproj">
+               BuildableName = "Proximity93316TrackerUITests.xctest"
+               BlueprintName = "Proximity93316TrackerUITests"
+               ReferencedContainer = "container:Proximity93316Tracker.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -68,9 +68,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1FEA5C9E2BBC8A250023D38D"
-            BuildableName = "Rubber Duck.app"
-            BlueprintName = "Rubber Duck"
-            ReferencedContainer = "container:Rubber Duck.xcodeproj">
+            BuildableName = "Proximity93316Tracker.app"
+            BlueprintName = "Proximity93316Tracker"
+            ReferencedContainer = "container:Proximity93316Tracker.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -85,9 +85,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1FEA5C9E2BBC8A250023D38D"
-            BuildableName = "Rubber Duck.app"
-            BlueprintName = "Rubber Duck"
-            ReferencedContainer = "container:Rubber Duck.xcodeproj">
+            BuildableName = "Proximity93316Tracker.app"
+            BlueprintName = "Proximity93316Tracker"
+            ReferencedContainer = "container:Proximity93316Tracker.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
