--- a/Proximity--Tracker--Info.plist
+++ b/Proximity--Tracker--Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDisplayName</key>
-	<string>Proximity Tracker</string>
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
 	<array>
 		<string></string>
@@ -21,5 +19,13 @@
 		<string>fetch</string>
 		<string>location</string>
 	</array>
+	<key>NFCReaderUsageDescription</key>
+	<string>Proximity Tracker NFC to scan and connect to devices.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Proximity Tracker required location to track devices.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Proximity Tracker required location to track devices</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Proximity Tracker required Blueetooth to scan and connect.</string>
 </dict>
 </plist>
